<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WARIKAN</string>
    <string name="title">Warikan</string>
    <string name="Yen">円</string>
    <string name="totalAmount">合計</string>
    <string name="spacer">    </string>
    <string name="totalPayment">請求金額</string>
    <string name="modStart">（おつり </string>
    <string name="modEnd"> 円）</string>
    <string name="check_Charge">サービス料</string>
    <string name="name_tenKey">数値入力</string>
    <string name="payment_Message">支払金額を入力してください。</string>
    <string name="serviceCharge_Message">サービス料の割合を % で入力してください。</string>
    <string name="numberOfGentlemen_Message">スポンサーの人数を入力してください。</string>
    <string name="numberOfMen_Message">男性の人数を入力してください。</string>
    <string name="numberOfWomen_Message">女性の人数を入力してください。</string>
    <string name="paymentGentlemen_Message">スポンサーが払う額を入力してください。</string>
    <string name="paymentMen_Message">男性が払う額を入力してください。</string>
    <string name="paymentWomen_Message">女性が払う額を入力してください。</string>
    <string name="info_postfix">です。</string>
    <string name="info_payment">支払い金額は、</string>
    <string name="info_updatePayment">それぞれの支払い金額を計算しました。</string>
    <string name="person">人</string>
    <string name="payPerPerson">円/人</string>
    <string name="default_yen_value">0</string>
    <string name="description"> </string>
    <string name="label_clear">CLR</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_enter">Enter</string>
    <string name="label_zerozero">00</string>
    <string name="label_zero">0</string>
    <string name="label_one">1</string>
    <string name="label_two">2</string>
    <string name="label_three">3</string>
    <string name="label_four">4</string>
    <string name="label_five">5</string>
    <string name="label_six">6</string>
    <string name="label_seven">7</string>
    <string name="label_eight">8</string>
    <string name="label_nine">9</string>
    <string name="description_numeric_data">入力数字</string>
</resources>
