<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView
        android:id="@+id/tenKeyMessage"
        android:text="@string/spacer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </TextView>
    <EditText
        android:id="@+id/numericData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/description"
        android:layout_below="@id/tenKeyMessage">
    </EditText>
    <Button
        android:id="@+id/button_Clear"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_below="@id/numericData"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:textSize="8pt"
        android:text="@string/label_clear">
    </Button>
    <Button
        android:id="@+id/button_Seven"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_below="@id/numericData"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:textSize="8pt"
        android:text="@string/label_seven">
    </Button>
    <Button
        android:id="@+id/button_Eight"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@id/button_Seven"
        android:layout_toEndOf="@id/button_Seven"
        android:layout_alignTop="@id/button_Seven"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:textSize="8pt"
        android:text="@string/label_eight">
    </Button>
    <Button
        android:id="@+id/button_Nine"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@id/button_Eight"
        android:layout_toEndOf="@id/button_Eight"
        android:layout_alignTop="@id/button_Eight"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:textSize="8pt"
        android:text="@string/label_nine">
    </Button>
    <Button
        android:id="@+id/button_Four"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_below="@id/button_Seven"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:textSize="8pt"
        android:text="@string/label_four">
    </Button>
    <Button
        android:id="@+id/button_Five"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_below="@id/button_Eight"
        android:layout_toRightOf="@id/button_Four"
        android:layout_toEndOf="@id/button_Four"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:textSize="8pt"
        android:text="@string/label_five">
    </Button>
    <Button
        android:id="@+id/button_Six"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_below="@id/button_Nine"
        android:layout_toRightOf="@id/button_Five"
        android:layout_toEndOf="@id/button_Five"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:textSize="8pt"
        android:text="@string/label_six">
    </Button>
    <Button
        android:id="@+id/button_One"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_below="@id/button_Four"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:textSize="8pt"
        android:text="@string/label_one">
    </Button>
    <Button
        android:id="@+id/button_Two"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_below="@id/button_Five"
        android:layout_toRightOf="@id/button_One"
        android:layout_toEndOf="@id/button_One"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:textSize="8pt"
        android:text="@string/label_two">
    </Button>
    <Button
        android:id="@+id/button_Three"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_below="@id/button_Six"
        android:layout_toRightOf="@id/button_Two"
        android:layout_toEndOf="@id/button_Two"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:textSize="8pt"
        android:text="@string/label_three">
    </Button>
    <Button
        android:id="@+id/button_Zero"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_below="@id/button_One"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:textSize="8pt"
        android:text="@string/label_zero">
    </Button>
    <Button
        android:id="@+id/button_ZeroZero"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_below="@id/button_Two"
        android:layout_toRightOf="@id/button_Zero"
        android:layout_toEndOf="@id/button_Zero"
        android:textSize="8pt"
        android:text="@string/label_zerozero">
    </Button>
    <Button
        android:id="@+id/button_Cancel"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_below="@id/button_Three"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="8pt"
        android:text="@string/button_cancel">
    </Button>
    <Button
        android:id="@+id/button_Enter"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_toLeftOf="@id/button_Cancel"
        android:layout_toStartOf="@id/button_Cancel"
        android:layout_alignTop="@id/button_Cancel"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textStyle="bold"
        android:textSize="8pt"
        android:text="@string/button_enter">
    </Button>
</RelativeLayout>
