<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#a0a0a0"
    >

    <!-- 支払い総額の設定領域  -->
    <TextView
        android:id="@+id/totalPaymentLabel"
        android:text="@string/totalPayment"
        android:textSize="11pt"
        android:textStyle="bold"
        android:textColor="#0a0a0a"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:id="@+id/totalPaymentData"
        android:text="@string/default_yen_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:layout_toRightOf="@id/totalPaymentLabel"
        android:layout_toEndOf="@id/totalPaymentLabel"
        android:layout_alignTop="@id/totalPaymentLabel"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:textSize="11pt"
        android:textStyle="bold"
        android:textColor="#0a0a0a">
    </TextView>
    <TextView
        android:id="@+id/paymentUnit"
        android:text="@string/Yen"
        android:textSize="11pt"
        android:textColor="#0a0a0a"
        android:layout_toRightOf="@id/totalPaymentData"
        android:layout_toEndOf="@id/totalPaymentData"
        android:layout_alignTop="@id/totalPaymentData"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

<!-- 
    < Button
        android:id="@+id/button_setPayment"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@id/paymentUnit"
        android:layout_alignTop="@id/paymentUnit"
        android:layout_marginLeft="12px"
        android:textSize="8pt"
        android:text="@string/button_set" >
    < / Button >
-->
    
    <!-- サービス料加算 -->
    <CheckBox android:id="@+id/chkAddCharge"
        android:text="@string/check_Charge"
        android:textSize="9pt"
        android:textColor="#0a0a0a"
        android:layout_below="@id/totalPaymentData"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </CheckBox>
    <TextView
        android:id="@+id/serviceCharge"        
        android:text="@string/spacer"
        android:layout_toRightOf="@id/chkAddCharge"
        android:layout_toEndOf="@id/chkAddCharge"
        android:layout_alignBaseline="@id/chkAddCharge"
        android:textSize="9pt"
        android:textColor="#0a0a0a"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <!-- ここから割り勘人員構成表示   -->

    <!-- スポンサーさん -->
    <ImageView
        android:id="@+id/gentlemenImage"
        android:scaleType="centerInside"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_below="@id/chkAddCharge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/gentlemens"
    />
    <ImageView
        android:id="@+id/gentlemenTimes"
        android:scaleType="centerInside"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@id/gentlemenImage"
        android:layout_toEndOf="@id/gentlemenImage"
        android:layout_alignTop="@id/gentlemenImage"
        android:layout_width="12dp"
        android:layout_height="34dp"
        android:src="@drawable/times"
    />
    <TextView
        android:id="@+id/numberOfGentlemen"
        android:text="@string/default_yen_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:layout_toRightOf="@id/gentlemenTimes"
        android:layout_toEndOf="@id/gentlemenTimes"
        android:layout_alignTop="@id/gentlemenImage"
        android:textStyle="bold"
        android:textSize="9pt"
        android:textColor="#0a0a0a"
    />
    <TextView
        android:id="@+id/numberOfGentlemenLabel"
        android:text="@string/person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/numberOfGentlemen"
        android:layout_toEndOf="@id/numberOfGentlemen"
        android:layout_alignBottom="@id/numberOfGentlemen"
        android:textSize="12pt"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="#0a0a0a"
    />
    <TextView
        android:id="@+id/GentlemenMoney"
        android:text="@string/default_yen_value"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@id/numberOfGentlemenLabel"
        android:layout_toEndOf="@id/numberOfGentlemenLabel"
        android:layout_alignBottom="@id/numberOfGentlemen"
        android:layout_marginRight="2dp"
        android:layout_marginEnd="2dp"
        android:textSize="10pt"
        android:textColor="#0a0a0a"
        android:background="@android:drawable/editbox_background"
    />
    <TextView
        android:id="@+id/GentlemenMoneyUnit"
        android:text="@string/payPerPerson"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@id/GentlemenMoney"
        android:layout_toEndOf="@id/GentlemenMoney"
        android:layout_alignBottom="@id/numberOfGentlemen"
        android:layout_marginRight="2dp"
        android:layout_marginEnd="2dp"
        android:textSize="10pt"
        android:textColor="#0a0a0a"
    />

    <!-- 男性 -->
    <ImageView
        android:id="@+id/menImage"
        android:scaleType="centerInside"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_below="@id/GentlemenMoney"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/mens"
    />
    <ImageView
        android:id="@+id/menTimes"
        android:scaleType="centerInside"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@id/menImage"
        android:layout_toEndOf="@id/menImage"
        android:layout_alignTop="@id/menImage"
        android:layout_width="12dp"
        android:layout_height="34dp"
        android:src="@drawable/times"
    />
    <TextView
        android:id="@+id/numberOfMen"
        android:text="@string/default_yen_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:layout_toRightOf="@id/menTimes"
        android:layout_toEndOf="@id/menTimes"
        android:layout_alignTop="@id/menImage"
        android:textStyle="bold"
        android:textSize="9pt"
        android:textColor="#0a0a0a"
    />
    <TextView
        android:id="@+id/numberOfMenLabel"
        android:text="@string/person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/numberOfMen"
        android:layout_toEndOf="@id/numberOfMen"
        android:layout_alignBottom="@id/numberOfMen"
        android:textSize="12pt"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="#0a0a0a"
    />
    <TextView
        android:id="@+id/MenMoney"
        android:text="@string/default_yen_value"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@id/numberOfMenLabel"
        android:layout_toEndOf="@id/numberOfMenLabel"
        android:layout_alignBottom="@id/numberOfMen"
        android:layout_marginRight="2dp"
        android:layout_marginEnd="2dp"
        android:textSize="10pt"
        android:textColor="#0a0a0a"
        android:background="@android:drawable/editbox_background"
    />
    <TextView
        android:id="@+id/MenMoneyUnit"
        android:text="@string/payPerPerson"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@id/MenMoney"
        android:layout_toEndOf="@id/MenMoney"
        android:layout_alignBottom="@id/numberOfMen"
        android:layout_marginRight="2dp"
        android:layout_marginEnd="2dp"
        android:textSize="10pt"
        android:textColor="#0a0a0a"
    />

    <!-- 女性 -->
    <ImageView
        android:id="@+id/womenImage"
        android:scaleType="centerInside"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_below="@id/MenMoney"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/womens"
    />
    <ImageView
        android:id="@+id/womenTimes"
        android:scaleType="centerInside"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@id/womenImage"
        android:layout_toEndOf="@id/womenImage"
        android:layout_alignTop="@id/womenImage"
        android:layout_width="12dp"
        android:layout_height="34dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/times"
    />
    <TextView
        android:id="@+id/numberOfWomen"
        android:text="@string/default_yen_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:layout_toRightOf="@id/womenTimes"
        android:layout_toEndOf="@id/womenTimes"
        android:layout_alignTop="@id/womenImage"
        android:textStyle="bold"
        android:textSize="9pt"
        android:textColor="#0a0a0a"
    />
    <TextView
        android:id="@+id/numberOfWomenLabel"
        android:text="@string/person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/numberOfWomen"
        android:layout_toEndOf="@id/numberOfWomen"
        android:layout_alignBottom="@id/numberOfWomen"
        android:textSize="12pt"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="#0a0a0a"
    />
    <TextView
        android:id="@+id/WomenMoney"
        android:text="@string/default_yen_value"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@id/numberOfWomenLabel"
        android:layout_toEndOf="@id/numberOfWomenLabel"
        android:layout_alignBottom="@id/numberOfWomen"
        android:layout_marginRight="2dp"
        android:layout_marginEnd="2dp"
        android:textSize="10pt"
        android:textColor="#0a0a0a"
        android:background="@android:drawable/editbox_background"
    />
    <TextView
        android:id="@+id/WomenMoneyUnit"
        android:text="@string/payPerPerson"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@id/WomenMoney"
        android:layout_toEndOf="@id/WomenMoney"
        android:layout_alignBottom="@id/numberOfWomen"
        android:layout_marginRight="2dp"
        android:layout_marginEnd="2dp"
        android:textSize="10pt"
        android:textColor="#0a0a0a"
    />

    <!-- 支払い総額の表示欄設定  -->
    <TextView
        android:id="@+id/totalAmountLabel"
        android:text="@string/totalAmount"
        android:layout_below="@id/womenTimes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="9pt"
        android:textStyle="bold"
        android:textColor="#0a0a0a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="6dp"
        android:layout_marginEnd="6dp"
    />
    <TextView
        android:id="@+id/totalAmountValue"
        android:text="@string/default_yen_value"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@id/totalAmountLabel"
        android:layout_toEndOf="@id/totalAmountLabel"
        android:layout_alignBottom="@id/totalAmountLabel"
        android:textStyle="bold"
        android:textSize="9pt"
        android:textColor="#0a0a0a"
    />
    <TextView
        android:id="@+id/totalAmountUnit"
        android:text="@string/Yen"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@id/totalAmountValue"
        android:layout_toEndOf="@id/totalAmountValue"
        android:layout_alignBottom="@id/totalAmountLabel"
        android:layout_marginRight="6dp"
        android:layout_marginEnd="6dp"
        android:textSize="9pt"
        android:textColor="#0a0a0a"
    />
    <TextView
        android:id="@+id/additionalInfoTotalAmount"
        android:text="@string/description"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@id/totalAmountUnit"
        android:layout_toEndOf="@id/totalAmountUnit"
        android:layout_alignBottom="@id/totalAmountLabel"
        android:textSize="9pt"
        android:textColor="#0a0a0a"
    />
</RelativeLayout>
